# PokerClient

./: .flake8  Pipfile  README.md  client.py  combinations.py  constants.py  dodo.py  game.py  misc.py  msg.pot  pyproject.toml  test_combinations.py
docs/: conf.py  index.rst
po/ru_RU.UTF-8/LC_MESSAGES/: msg.mo  msg.po
src/: __init__.py  __main__.py  __main__server.py  client.py  combinations.py  game.py  test_Player_create_my_combination_str.py  test_Round_dealing_cards.py  test_Round_finish_round.py  test_cards_to_str.py  test_combinations.py
src/client/: __main__.py  client.py  pyproject.toml
src/client/PokerClient.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/server/: __init__.py  __main__.py  bot_logic.py  client.py  combinations.py  constants.py  game.py  misc.py  print_information.py  pyproject.toml  requirements.txt  test_Player_create_my_combination_str.py  test_Round_dealing_cards.py  test_Round_finish_round.py  test_cards_to_str.py  test_combinations.py
tests/: test_Player_create_my_combination_str.py  test_Round_dealing_cards.py  test_Round_divide_win_balance.py  test_Round_finish_round.py  test_cards_to_str.py  test_combinations.py
