[project]
name = "PokerClient"
version = "0.1"
description = "Play poker in terminal"
requires-python = ">=3.10"
authors = [
 {name = "SanchoMerkushev", email = "sashamerkushev@yandex.ru"},
 {name = "iemttt", email = "s02190454@gse.cs.msu.ru"}
]
keywords = ["poker", "terminal"]
classifiers = ["Programming Language :: Python :: 3"]

[build-system]
requires = ["setuptools", "Sphinx", "build", "doit", "flake8", "flake8-docstrings", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
src = "src"
[tool.setuptools.package-data]
src = ["po/*/*/*.mo"]

[project.scripts]
PokerServer = "src.server.__main__:server_main"
