[project]
name = "PokerClient"
version = "0.1"
description = "Play poker in terminal"
readme = "README.md"
requires-python = ">=3.10"
authors = [
 {name = "SanchoMerkushev", email = "sashamerkushev@yandex.ru"},
 {name = "iemttt", email = "s02190454@gse.cs.msu.ru"}
]

keywords = ["Poket", "terminal"]
classifiers = [
      "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[build-system]
requires = ["Sphinx", "build", "coverage", "doit", "flake8", "flake8-docstrings", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
PokerClient = "."
